fixe overflow bug

--- a/assets/style/style.css
+++ b/assets/style/style.css
@@ -11,6 +11,7 @@ html {
 body {
     font-family: 'Poppins', sans-serif;
     background-color: black;
+    overflow-x: hidden;
 }
 
 /* start general classes  */
